# robo-bazel-fork

android/robolectric-testing/: .gitignore  WORKSPACE
android/robolectric-testing/.aswb/: .bazelproject
android/robolectric-testing/.aswb/.blaze/aar_libraries/annotation-1.1.0-alpha01_4b3ccdb2.aar/: AndroidManifest.xml
android/robolectric-testing/.aswb/.blaze/aar_libraries/espresso-core-3.6.0-alpha01_be207e69.aar/: AndroidManifest.xml
android/robolectric-testing/.aswb/.blaze/aar_libraries/espresso-idling-resource-3.6.0-alpha01_a18538e3.aar/: AndroidManifest.xml
android/robolectric-testing/.aswb/.blaze/aar_libraries/junit-1.2.0-alpha01_d1513896.aar/: AndroidManifest.xml
android/robolectric-testing/.aswb/.blaze/aar_libraries/junit-ktx-1.1.5_90c0793e.aar/: AndroidManifest.xml
android/robolectric-testing/.aswb/.blaze/aar_libraries/monitor-1.7.0-alpha01_da5f17e6.aar/: AndroidManifest.xml
android/robolectric-testing/.aswb/.blaze/aar_libraries/roborazzi-1.2.0-alpha-1_73a7f255.aar/: AndroidManifest.xml
android/robolectric-testing/.aswb/.blaze/aar_libraries/roborazzi-junit-rule-1.2.0-alpha-1_6e1eb659.aar/: AndroidManifest.xml
android/robolectric-testing/.aswb/.blaze/aar_libraries/ui-1.4.0_d0723d51.aar/res/values-ur/: values-ur.xml
android/robolectric-testing/app/: BUILD.bazel
android/robolectric-testing/app/src/main/: AndroidManifest.xml
android/robolectric-testing/app/src/test/java/com/example/android/bazel/: WelcomeActivityTest.kt
