load("@io_bazel_rules_kotlin//kotlin:android.bzl", "kt_android_library", "kt_android_local_test")

kt_android_library(
    name = "lib",
    srcs = glob(["src/main/java/**/*.kt"]),
    custom_package = "com.example.android.bazel",
    manifest = "src/main/AndroidManifest.xml",
    resource_files = glob(["src/main/res/**"]),
    deps = [
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib_common",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib_jdk7",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib_jdk8",
        "@maven//:junit_junit",
        "@maven//:com_google_truth_truth",
        "@maven//:org_robolectric_robolectric",
        "@maven//:androidx_test_monitor",
        "@maven//:androidx_test_core",
        "@maven//:androidx_test_espresso_espresso_core",
        "@maven//:androidx_test_runner",
        "@maven//:androidx_test_ext_junit",
        "@maven//:androidx_test_services_storage",
        "@maven//:androidx_activity_activity_ktx",
        "@maven//:androidx_activity_activity_compose",
        "@maven//:androidx_compose_ui_ui",
        "@maven//:androidx_lifecycle_lifecycle_runtime",
        "@maven//:androidx_lifecycle_lifecycle_process",
        "@maven//:androidx_activity_activity",
        "@maven//:androidx_lifecycle_lifecycle_runtime_ktx",
        "@maven//:androidx_core_core",
        "@maven//:androidx_core_core_ktx",
        "@maven//:androidx_compose_ui_ui_test_junit4",
        "@maven//:androidx_compose_ui_ui_test",
        "@maven//:com_dropbox_differ_differ",
        "@robolectric//bazel:android-all",
    ],
)


kt_android_local_test(
    name = "test",
    manifest = "src/main/AndroidManifest.xml",
    srcs = ["src/test/java/com/example/android/bazel/WelcomeActivityTest.kt"],
    custom_package = "com.example.android.bazel.test",
    test_class = "com.example.android.bazel.WelcomeActivityTest",
    deps = [
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib_common",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib_jdk7",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib_jdk8",
        "@maven//:junit_junit",
        "@maven//:com_google_truth_truth",
        "@maven//:org_robolectric_robolectric",
        "@maven//:androidx_test_monitor",
        "@maven//:androidx_test_core",
        "@maven//:androidx_test_espresso_espresso_core",
        "@maven//:androidx_test_runner",
        "@maven//:androidx_test_ext_junit",
        "@maven//:androidx_test_services_storage",
        "@maven//:androidx_activity_activity_ktx",
        "@maven//:androidx_activity_activity_compose",
        "@maven//:androidx_compose_ui_ui",
        "@maven//:androidx_lifecycle_lifecycle_runtime",
        "@maven//:androidx_lifecycle_lifecycle_process",
        "@maven//:androidx_activity_activity",
        "@maven//:androidx_lifecycle_lifecycle_runtime_ktx",
        "@maven//:androidx_core_core",
        "@maven//:androidx_core_core_ktx",
        "@maven//:androidx_compose_ui_ui_test_junit4",
        "@maven//:androidx_compose_ui_ui_test",
        "@maven//:com_dropbox_differ_differ",
        "@maven//:io_github_takahirom_roborazzi_roborazzi",
        "@maven//:io_github_takahirom_roborazzi_roborazzi_junit_rule",
        "@maven//:io_github_takahirom_roborazzi_roborazzi_painter",
        "@robolectric//bazel:android-all",
        ":lib",
    ],
)
